--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1" /> -->
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Engineer's Day 2020 Exam" />
-    <title>Engineer's' Day 2020</title>
+    <title>NEET Mock Test</title>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
